# sp1-bitcoin-core-test

./: .gitignore  Cargo.toml  README.md
bitcoin-core-rs/: Cargo.toml  README.md  build.rs  vendor-bitcoin-core.sh
bitcoin-core-rs/src/: lib.rs
bitcoin-core-rs/src/native/: sha256_wrapper.cpp  sha256_wrapper.h
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
